--- a/frontend/src/pages/menuPage.css
+++ b/frontend/src/pages/menuPage.css
@@ -1,36 +1,75 @@
 /* src/assets/css/menuPage.css */
 
-.menu-page {
-    padding: 20px;
+@media (min-width: 1200px) {
+    .container-box {
+      padding: 2vh 2vw;
+      margin: 1vh 2vw 0vh;
+      border-radius: 20px;
+    }
+  
+    .breadcrumbs {
+      margin-left: 1vw;
+      margin-top: 2vh;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .search-input {
+      margin-top: 1vh;
+      padding: 8px;
+      font-size: 1em;
+      width: 80%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+  
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
   }
   
-  .search-bar {
-    margin-bottom: 20px;
-    text-align: center;
-  }
+  @media (max-width: 1199px) {
+    .container-box {
+      padding: 2vh 2vw;
+      margin: 1vh 3vw;
+      border-radius: 20px;
+    }
   
-  .search-bar input {
-    padding: 8px;
-    font-size: 1em;
-    width: 80%;
-    max-width: 400px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
+    .breadcrumbs {
+      margin-left: 3vw;
+      margin-top: 2vh;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
   
-  .food-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 16px;
-    justify-items: center;
+    .search-input {
+      margin-top: 1vh;
+      padding: 8px;
+      font-size: 1em;
+      width: 90%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+  
+    .card-grid {
+      display: flex;
+      flex-flow: column nowrap;
+      gap: 20px;
+    }
   }
   
   .food-card {
-    width: 100%;
-    max-width: 250px;
+    padding: 16px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.3s ease;
-    padding: 10px;
     text-align: center;
   }
   
@@ -58,4 +97,20 @@
     padding: 0;
     margin: 0;
   }
+
+  /* src/assets/css/menuPage.css */
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    min-width: 300px;
+    max-width: 600px;
+  }
+  
   
